@@ -1,0 +1,7 @@
+#
+## i-MSCP local courier-imap configuration file
+#
+# This file is sourced at end of the main imapd configuration file ( i.e /etc/courier/imapd )
+
+# Enable CRAM-* support
+IMAP_CAPABILITY="$IMAP_CAPABILITY AUTH=CRAM-MD5 AUTH=CRAM-SHA1 AUTH=CRAM-SHA256"
